--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name="SettingsActivity"></activity>
+        <activity android:name="DetailsActivity"></activity>
     </application>
 
 </manifest>
