--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,9 +9,11 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.NoTitleBar"
+         >
         <activity
-            android:name=".MainActivity"
+            android:name="TabWidget"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +23,7 @@
         </activity>
         <activity android:name="SettingsActivity"></activity>
         <activity android:name="DetailsActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
