--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,18 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.snuderl"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="8" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
+        android:name="ApplicationState"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar"
-         >
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name=".activity.TabWidget"
             android:label="@string/app_name" >
@@ -23,11 +27,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.UserAccount"></activity>
-        <activity android:name=".activity.SettingsActivity"></activity>
-        <activity android:name=".activity.MainActivity"></activity>
-        <activity android:name=".activity.PersonalizedActivity"></activity>
-        <activity android:name=".activity.DetailsActivity"></activity>
+        <activity android:name=".activity.UserAccount" >
+        </activity>
+        <activity android:name=".activity.SettingsActivity" >
+        </activity>
+        <activity android:name=".activity.MainActivity" >
+        </activity>
+        <activity android:name=".activity.PersonalizedActivity" >
+        </activity>
+        <activity android:name=".activity.DetailsActivity" >
+        </activity>
     </application>
 
 </manifest>
